cabal-version: 2.0

name: boston-haskell-arcade
version: 0
build-type: Simple
tested-with: GHC == 8.4.3

library
  build-depends:
      base
    , bytestring
    , cereal
    , containers
    , directory
    , filepath
    , free
    , lens ^>= 4.17
    , mtl
    , random
    , reactive-banana ^>= 1.2.0
    , stm ^>= 2.4.5
    , termbox-banana ^>= 0.1.0
    , text ^>= 1.2.3
    , time
    -- ^>= 1.9.2
    , transformers
    , unordered-containers
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010
  exposed-modules:
    Bha.Banana.Menu
    Bha.Banana.Prelude
    Bha.Banana.Tick
    Bha.Banana.Versioned
    Bha.Game
    Bha.Game.Impl.BananaExample
    Bha.Game.Impl.BlimpBoy
    Bha.Game.Impl.ElmExample
    Bha.Game.Impl.GrainMan
    Bha.Game.Impl.H2048
    Bha.Game.Impl.Paint
    Bha.Game.Impl.Snake
    Bha.Elm.Prelude
    Bha.Elm.Versioned
    Bha.Main
    Bha.Main.Game
    Bha.Main.Menu
    Bha.Prelude
    Bha.View
    Internal.Bha.Banana.Prelude
    Internal.Bha.Elm.Prelude
    Internal.Bha.Orphans
    Internal.Bha.Versioned
    Internal.Bha.View
  ghc-options:
    -Weverything
    -fno-warn-all-missed-specialisations
    -fno-warn-missed-specialisations
    -fno-warn-missing-import-lists
    -fno-warn-unsafe
  hs-source-dirs:
    src

executable boston-haskell-arcade
  build-depends:
      base
    , boston-haskell-arcade
  default-language:
    Haskell2010
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N2
  main-is:
    app/Main.hs
