cabal-version: 2.4

name: boston-haskell-arcade
version: 0
build-type: Simple
tested-with: GHC == 8.4.3

library
  build-depends:
    aeson ^>= 1.4.4,
    base,
    bytestring ^>= 0.10.8,
    cereal,
    containers ^>= 0.6.1,
    directory ^>= 1.3.3,
    filepath ^>= 1.4.2,
    free ^>= 5.1.1,
    lens ^>= 4.17,
    mtl ^>= 2.2.2,
    random,
    reactive-banana ^>= 1.2.1,
    slave-thread ^>= 1.0.2,
    split ^>= 0.2.3,
    stm ^>= 2.5.0,
    termbox-banana ^>= 0.1.0,
    text,
    time ^>= 1.8 || ^>= 1.9,
    transformers ^>= 0.5.6,
    unliftio ^>= 0.2.9,
    unordered-containers ^>= 0.2.10,
    websockets,

  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Bha.Banana.Menu
    Bha.Banana.Prelude
    Bha.Banana.Tick
    Bha.Banana.Versioned
    Bha.Game.Impl.BananaExample
    Bha.Game.Impl.BlimpBoy
    Bha.Game.Impl.ElmExample
    Bha.Game.Impl.FlappingJ
    Bha.Game.Impl.GrainMan
    Bha.Game.Impl.H2048
    Bha.Game.Impl.LambdaChat
    Bha.Game.Impl.Paint
    Bha.Game.Impl.Snake
    Bha.Elm.Prelude
    Bha.Elm.Versioned
    Bha.Main
    Bha.Main.Game
    Bha.Main.Menu
    Bha.Prelude
    Bha.View
    Internal.Bha.Banana.Prelude
    Internal.Bha.Debug
    Internal.Bha.Elm.Prelude
    Internal.Bha.Orphans
    Internal.Bha.Versioned
    Internal.Bha.View

  ghc-options:
    -Weverything
    -fno-warn-all-missed-specialisations
    -fno-warn-missed-specialisations
    -fno-warn-missing-import-lists
    -fno-warn-unsafe

  hs-source-dirs:
    src

executable boston-haskell-arcade
  build-depends:
      base
    , boston-haskell-arcade

  default-language:
    Haskell2010

  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N2

  main-is:
    app/Main.hs
