cabal-version: 2.4

name: boston-haskell-arcade
version: 0
build-type: Simple
tested-with: GHC == 8.4.4, GHC == 8.6.5

common all
  build-depends:
    base ^>= 4.11 || ^>= 4.12,

  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Weverything
    -fno-warn-all-missed-specialisations
    -fno-warn-missed-specialisations
    -fno-warn-missing-import-lists
    -fno-warn-name-shadowing
    -fno-warn-unsafe

library
  import:
    all

  build-depends:
    aeson ^>= 1.4.4,
    base,
    boston-haskell-arcade-internal,
    bytestring ^>= 0.10.8,
    cereal,
    containers ^>= 0.6.1,
    directory ^>= 1.3.3,
    filepath ^>= 1.4.2,
    generic-lens ^>= 1.1.0,
    free ^>= 5.1.1,
    lens ^>= 4.17,
    mtl ^>= 2.2.2,
    random,
    reactive-banana ^>= 1.2.1,
    slave-thread ^>= 1.0.2,
    split ^>= 0.2.3,
    stm ^>= 2.5.0,
    termbox-banana ^>= 0.2.0,
    text,
    time ^>= 1.8 || ^>= 1.9,
    transformers ^>= 0.5.6,
    unliftio ^>= 0.2.9,
    unordered-containers ^>= 0.2.10,
    websockets,

  exposed-modules:
    Bha.Banana.Menu
    Bha.Banana.Prelude
    Bha.Banana.Tick
    Bha.Banana.Versioned
    Bha.Data.Board
    Bha.Game.Impl.BlimpBoy
    Bha.Game.Impl.FlappingJ
    Bha.Game.Impl.GrainMan
    Bha.Game.Impl.H2048
    Bha.Game.Impl.LambdaChat
    Bha.Game.Impl.Paint
    Bha.Game.Impl.Snake
    Bha.Game.Impl.Pong
    Bha.Elm.Prelude
    Bha.Elm.Versioned
    Bha.Main
    Bha.Main.Game
    Bha.Main.Menu
    Bha.Prelude
    Bha.View

  hs-source-dirs:
    src

library boston-haskell-arcade-internal
  import:
    all

  build-depends:
    bytestring,
    cereal,
    containers,
    directory,
    free,
    generic-lens,
    lens,
    mtl,
    random,
    reactive-banana,
    stm,
    termbox-banana,
    text,
    time,
    transformers,
    unliftio,
    unordered-containers,

  exposed-modules:
    Bha.Internal.Banana.Prelude
    Bha.Internal.Debug
    Bha.Internal.Elm.Prelude
    Bha.Internal.Orphans
    Bha.Internal.Prelude
    Bha.Internal.Versioned
    Bha.Internal.View

  hs-source-dirs:
    src-internal

executable boston-haskell-arcade
  import:
    all

  build-depends:
    boston-haskell-arcade,

  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N2

  main-is:
    app/Main.hs
