cabal-version: 2.4

name: boston-haskell-arcade-server
version: 0

executable boston-haskell-arcade-server
  build-depends:
    aeson ^>= 1.4.4,
    async ^>= 2.2.2,
    base,
    bytestring ^>= 0.10.8,
    http-types ^>= 0.12,
    network ^>= 3.0 || ^>= 3.1,
    stm ^>= 2.5.0,
    text ^>= 1.2.3,
    unordered-containers ^>= 0.2.9,
    wai ^>= 3.2,
    wai-websockets ^>= 3.0,
    warp ^>= 3.2,
    websockets ^>= 0.12,
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  main-is: Main.hs
